--- a/ProyectoJ/events.html
+++ b/ProyectoJ/events.html
@@ -29,7 +29,7 @@
             <p title="Descripción del evento del Hackathon de Desarrollo Sostenible">Hackathon de Desarrollo Sostenible</p>
         </section>
         <section class="event-item">
-            <img src="imagenes/Imagen ciberseguridad.png" alt="Imagen del Taller de Ciberseguridad" title="Imagen del Taller de Ciberseguridad">
+            <img src="imagenes/Ciberseguridad1.jpg" alt="Imagen del Taller de Ciberseguridad" title="Imagen del Taller de Ciberseguridad">
             <p title="Descripción del evento del Taller de Ciberseguridad">Taller de Ciberseguridad</p>
         </section>
         <button class="back-btn" onclick="location.href='index.html'" title="Regresar a la página principal">Regresar</button>
